<resources>
    <string name="app_name">BizzaTrip</string>
    <string name="login">Login</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create new account</string>
    <string name="create_account_title">Buat Akun</string>
    <string name="create_account_subtitle">Buat rencana perjalananmu lebih efisien</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have an account</string>
    <string name="reset_password_subtitle">Please enter your email to reset the password</string>
    <string name="your_email">Your Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_button">Back</string>
    <string name="set_new_password">Set a new password</string>
    <string name="new_password_description">Create a new password. Ensure it differs from previous ones for security</string>
    <string name="password">Password</string>
    <string name="enter_new_password">Enter your new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="update_password">Update Password</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="navbar_1">home</string>
    <string name="navbar_2">map</string>
    <string name="navbar_3">perjalanan</string>
    <string name="navbar_4">saya</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="headline_homepage">Explore Indonesia!</string>
    <string name="searchbar_hint_homepage">Kemana anda ingin bepergian?</string>
    <string name="destination_image">image_trip</string>
    <string name="head_trip">Bali</string>
    <string name="destination_trip">Uluwatu - Pangempu</string>
    <string name="long_trip">Perjalanan 4 hari</string>
    <string name="buat_perjalanan">Buat Nama Perjalanan</string>
    <string name="back_icon">back_icon</string>
    <string name="perjalanan_saya">Perjalanan Saya</string>
    <string name="detail_perjalanan">Detail Perjalanan</string>
    <string name="headline_perjalanan">Perjalan 1</string>
    <string name="day_trip">November,11 2024 - November, 15 2024</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="pilih_wilayah">Pilih Wilayah</string>
    <string name="ntb">Nusa Tenggara Barat</string>
    <string name="bali">Bali</string>
    <string name="title_activity_maps_pick">MapsPickActivity</string>
    <string name="clear_markers">Clear markers</string>
    <string name="hapus_destinasi_fab">Hapus Destinasi</string>
    <string name="label_password">Password Baru</string>
    <string name="isi_password">Masukan Password Baru</string>
    <string name="isi_email">Masukan Email</string>
    <string name="isi_nama">Masukan Nama</string>
    <string name="label_nama">Nama</string>
    <string name="label_foto">Profile Picture</string>
    <string name="label_simpan">Simpan</string>
    <string name="day">day</string>
    <string name="title_activity_add_destinations_maps">AddDestinationsMapsActivity</string>
    <string name="start_plan">Start Plan</string>
    <string name="format_tanggal">YYYY/MM/DD</string>
    <string name="start_date_icon">Start Date Icon</string>
    <string name="end_plan">End Plan</string>
    <string name="end_date_icon">End Date Icon</string>
    <string name="pilih_destinasi">Pilih Destinasi</string>
    <string name="titik_awal">Pilih titik awal</string>
    <string name="pilih_lewat_map">Pilih lewat Map</string>
    <string name="welcome_message">Plan Your Perfect Trip</string>
    <string name="welcome_description_message">Explore and plan trips tailored to your interests and destinations</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="register_success">Register Account Success</string>
    <string name="login_success">Login Success</string>
    <string name="input_error">Input Error</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="register_failed">Register Failed</string>
    <string name="masukkan_nama_perjalanan">Masukkan nama perjalanan</string>
    <string name="articles_title_1">5 Tips Menikmati Destinasi Wisata yang Ramai Pengunjung</string>
    <string name="article_description_1">Ingin menikmati destinasi wisata yang ramai? Temukan 5 tips jitu untuk menikmati liburan tanpa terjebak keramaian!</string>
    <string name="article_content_1">
    Menghabiskan waktu liburan adalah hal yang penting untuk dilakukan ketika memiliki waktu luang. Salah satu cara menikmati liburan adalah dengan mengunjungi berbagai tempat wisata menarik, mulai dari taman hiburan, pusat perbelanjaan, hingga lokasi alam lainnya. Menikmati berbagai tempat wisata tersebut tentu bisa memberikan rasa relaksasi dan kebahagiaan tersendiri. Meskipun dapat memberikan relaksasi, keramaian pengunjung bisa mengurangi kenyamanan. Berikut lima tips untuk menikmati tempat wisata yang ramai dengan aman dan nyaman.

    1. Amati keadaan dengan baik<br/>
    Langkah pertama yang perlu dilakukan adalah memeriksa keadaan sekitar. Hal ini sangat penting untuk memastikan apakah destinasi wisata tersebut aman atau sebaliknya. Dengan begitu, tidak akan memaksakan diri jika situasinya tidak mendukung. Pastikan keramaian yang ada masih dalam batas yang aman dan tidak membahayakan. Jika semuanya tampak baik-baik saja, aktivitas liburan dapat dilanjutkan dengan lebih nyaman.<br/><br/>

    2. Carilah titik yang tak terlalu ramai<br/>
    Banyak orang sering mengunjungi destinasi yang sama karena daya tariknya yang khas. Meskipun tempat tersebut ramai pengunjung, biasanya masih ada area-area tertentu yang tidak terlalu padat. Menemukan tempat-tempat tersebut untuk beristirahat sejenak dapat membantu menghindari kelelahan akibat kerumunan. Hal ini penting untuk menjaga kenyamanan dan keselamatan selama berkunjung, sehingga tidak merasa kepanasan atau tertekan.<br/><br/>

    3. Perbanyak minum air putih<br/>
    Saat mengunjungi destinasi wisata luar ruangan yang ramai pengunjung, penting untuk meningkatkan konsumsi air putih. Hal ini karena risiko dehidrasi menjadi lebih tinggi, terutama jika cuaca sangat panas dan kerumunan pengunjung semakin padat. Tanpa cukup asupan cairan, tubuh bisa cepat mengalami dehidrasi, yang dapat menyebabkan pusing atau bahkan pingsan.<br/><br/>

    4. Beli tiket jalur fast track<br/>
    Bagi yang memilih taman hiburan sebagai destinasi liburan, penting untuk berhati-hati terutama saat hari libur. Pada hari-hari tersebut, jumlah pengunjung cenderung meningkat, membuat taman hiburan terasa lebih padat. Jika memiliki anggaran lebih, membeli tiket dengan jalur fast track bisa menjadi pilihan yang tepat. Dengan cara ini, kamu bisa menikmati wahana tanpa harus menghabiskan waktu menunggu antrean, sehingga liburan tetap menyenangkan dan bebas dari rasa lelah.<br/><br/>

    5. Hati-hati dengan barang bawaanmu<br/>
    Mengunjungi tempat yang ramai tidak hanya dapat menimbulkan ketidaknyamanan, tetapi juga meningkatkan risiko bahaya, seperti pencopetan atau pencurian yang sering terjadi di lokasi-lokasi tersebut. Untuk mencegah hal ini, sebaiknya selalu waspada terhadap barang bawaan, seperti dengan menempatkan tas di bagian depan tubuh sebagai langkah preventif. Hal ini penting untuk menghindari menjadi korban kejahatan atau risiko lainnya.<br/><br/>

    Memang, penting untuk tetap berhati-hati saat mengunjungi destinasi wisata yang ramai pengunjung. Dengan begitu, liburan dapat tetap dinikmati secara maksimal. Jangan lupa untuk selalu menjaga keamanan dan keselamatan bersama!
    </string>
    <string name="articles_title_2">Tips Berwisata Aman di Pantai</string>
    <string name="hapus">Hapus</string>
    <string name="hapus_perjalanan">Hapus Perjalanan ?</string>
    <string name="kembali">Kembali</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Apa anda yakin ingin logout?</string>
    <string name="delete">Delete</string>
</resources>