<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_inverseOnSurface_highContrast"
    android:padding="16dp">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_back_arrow"
        android:contentDescription="@string/back_button"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/forgot_password"
        android:textColor="@color/md_theme_inverseSurface_highContrast"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reset_password_subtitle"
        android:textColor="@color/md_theme_outlineVariant_highContrast"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_email"
        android:textSize="14sp"
        android:textColor="@color/md_theme_inverseSurface_highContrast"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:hint="@string/enter_your_email"
        android:background="@drawable/rounded_edittext_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/md_theme_inverseSurface_highContrast"
        android:textColorHint="@color/md_theme_secondaryFixed_mediumContrast"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tv_email_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/reset_password"
        android:backgroundTint="@color/md_theme_primaryFixed_highContrast"
        android:textColor="@color/md_theme_onPrimary_mediumContrast"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>